修改图表高度自适应

--- a/power_station/Application/Home/View/AnalysisView/meteorological_resources.html
+++ b/power_station/Application/Home/View/AnalysisView/meteorological_resources.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="analysisView" id="right">
-      <div class="container-fluid no-padding">
+      <div class="container-fluid no-padding" style="height: 100%">
 
         <!-- 主内容标题栏 -->
         <div class="col-sm-12 overview-title">
@@ -45,9 +45,9 @@
           </div>
         </div>
 
-        <div id="main-content" class="col-sm-12 main-padding">
+        <div id="main-content" class="col-sm-12 main-padding" style="height: 90%">
           <!-- 添加自己内容 -->
-          <div class="col-sm-12 panel no-padding">
+          <div class="col-sm-12 panel no-padding" style="height: 40%">
             <div class="col-sm-12 no-padding">
               <span class="text-center col-sm-7-d">星期日</span>
               <span class="text-center col-sm-7-d">星期一</span>
@@ -274,7 +274,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 panel no-padding">
+          <div class="col-sm-12 panel no-padding" style="height: 60%">
             <div style="padding: 15px;">
               <span>辐射总量</span>
               <span class="pull-right">
@@ -334,7 +334,7 @@
         grid: {
           left: 100,
           right: 100,
-          botton: 0,
+          bottom: 100,
         },
         xAxis: [{
           type: 'category',
