--- a/power_station/Application/Home/View/AnalysisView/power_generation.html
+++ b/power_station/Application/Home/View/AnalysisView/power_generation.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="analysisView" id="right">
-      <div class="container-fluid no-padding">
+      <div class="container-fluid no-padding" style="height: 100%">
 
         <!-- 主内容标题栏 -->
         <div class="col-sm-12 overview-title">
@@ -43,7 +43,7 @@
           </div>
         </div>
 
-        <div id="main-content" class="col-sm-12 powerGeneration">
+        <div id="main-content" class="col-sm-12 powerGeneration" style="height: 95%">
           <!-- 添加自己内容 -->
           <div class="clearfix">
             <div class="col-sm-4" style="padding: 10px 5px;">
@@ -57,10 +57,10 @@
             </div>
           </div>
 
-          <div class="row row-xs" style="background-color: #FFF; margin: 0 5px;">
+          <div class="row row-xs" style="background-color: #FFF; margin: 0 5px; height: 95%">
             <div class="col-sm-12 panel no-margin" style=" min-height: 450px; height: 100%;">
-              <div style="padding: 15px;">
-                <div id="powerChartView" >
+              <div style="padding: 15px; height: 100%">
+                <div id="powerChartView" style="height: 100%">
                   <span class="pull-right">
                     <span class="m-r-xs">
                       <i class="fa fa-circle m-r-xs" style="color:#8c2967"></i>
