--- a/power_station/Application/Home/View/AnalysisView/overview.html
+++ b/power_station/Application/Home/View/AnalysisView/overview.html
@@ -26,7 +26,7 @@
     </div>
 
     <div id="right">
-      <div class="container-fluid no-padding">
+      <div class="container-fluid no-padding" style="height: 100%">
 
         <!-- 主内容标题栏 -->
         <div class="col-sm-12 overview-title">
@@ -182,10 +182,10 @@
           <div class="below"></div>
 
           <!-- 图表 -->
-          <div class="row row-xs">
+          <div class="row row-xs" style="height: 60%">
             <div class="col-sm-12 panel no-margin" style=" min-height: 450px; height: 100%;">
-              <div id="powerEfficId" style="padding: 15px;">
-                <div id="kwhChart" >
+              <div id="powerEfficId" style="padding: 15px; height: 100%">
+                <div id="kwhChart" style="height: 100%">
                   <span style="font-size: 14px;">发电量分析</span>
                   <span class="pull-right">
                     <span class="m-r-xs">
