--- a/power_station/Application/Home/View/Index/entrance.html
+++ b/power_station/Application/Home/View/Index/entrance.html
@@ -15,7 +15,7 @@
 		<img src="__PUBLIC__/images/bg.jpg">
 	</div>
 	<div id="div2">
-		<span>光伏智能电站监控系统</span>
+		<span>ADA光伏电站智能监控系统</span>
 	</div>
 	<!--map-->
 	<div id="main"></div>
