--- a/power_station/Public/style/station/power_station_monitor.css
+++ b/power_station/Public/style/station/power_station_monitor.css
@@ -199,10 +199,11 @@ div,p,h{margin:0;padding:0;}
 }
 #ZL{
 	overflow-y:auto;
+	height: 100%
 }
 .zhenlie{
     width:20%;
-    height:170px;
+    height:20%;
     display: table-cell;
     vertical-align: middle;
     float: left;
@@ -210,6 +211,7 @@ div,p,h{margin:0;padding:0;}
     text-align: center;
     border: 1px solid green;
     float: left;
+    box-sizing: border-box;
 }
 
 .imgnibianzhan{
