--- a/power_station/Application/Home/View/Station/list_view.html
+++ b/power_station/Application/Home/View/Station/list_view.html
@@ -11,7 +11,7 @@
       <include file="Common/left" />
     </div>
 
-   <!-- 主要内容 -->
+   <!-- 主要内容22 -->
     <div id="right" >
     <div class="right_d">
         <!-- 布局视图的标题 -->
