--- a/power_station/Application/Home/View/Station/list_view.html
+++ b/power_station/Application/Home/View/Station/list_view.html
@@ -90,7 +90,7 @@
                     </ul>
                     <span style="float:right;">
                         <small class="meiyexianshi">每页显示:</small>
-                        <select class="listview_select">
+                        <select class="listview_select" id="listview_select_id" onchange="firstLoadPage()">
                           <option checked value="10">10</option>
                           <option value="20">20</option>
                           <option value="20">30</option>
