新增台账试图以及修改左边设计

--- a/power_station/Application/Home/View/Common/left.html
+++ b/power_station/Application/Home/View/Common/left.html
@@ -56,8 +56,10 @@
               <i class="fa fa-caret-right active-right"></i>
             </a>
             <ul class="treeview-menu none">
-              <li><a href="#"><i class="fa fa-university fa-fw icon"></i>电站台帐</a></li>
+              <li><a href="{:U('Account/station_account')}"><i class="fa fa-university fa-fw icon"></i>电站台帐</a></li>
+              <!--
               <li><a href="#"><i class="fa fa-anchor  fa-fw icon"></i>运行配置</a></li>
+              -->
             </ul>
           </li>
         </ul>
