--- a/power_station/Application/Home/View/Index/lockScreen.html
+++ b/power_station/Application/Home/View/Index/lockScreen.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/bootstrap-3.3.0-dist/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/sweetalert-master/dist/sweetalert.css">
 	<link type="image/x-icon" rel="shortcut icon" href="__PUBLIC__/images/favicon.ico">
-	<title>光伏电站系统登陆</title>
+	<title>ADA光伏电站</title>
 </head>
 <body style="background-color:#1c2b36;color:rgb(51, 51, 51);width:100%;height:100%">
 	<div style="position:absolute;top:50%;left:50%;width:200px;height:100px;margin:-50px 0 0 -100px">
