--- a/power_station/Application/Home/View/Index/system_index.html
+++ b/power_station/Application/Home/View/Index/system_index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="__PUBLIC__/Static/sweetalert-master/dist/sweetalert.css">
 	<link type="image/x-icon" rel="shortcut icon" href="__PUBLIC__/images/favicon.ico">
 
-	<title>光伏电站</title>
+	<title>ADA光伏电站</title>
 </head>
 <body> 
 	<div>
