--- a/power_station/Public/style/common/menu.css
+++ b/power_station/Public/style/common/menu.css
@@ -18,6 +18,7 @@
   overflow-x:hidden;
   overflow-y:auto;
   z-index: 100; 
+  height: 100%;
 }
 
 #right{
@@ -28,4 +29,5 @@
   right:0;
   overflow-y:auto;
   overflow-x:hidden;
+  background-color: #f0f3f4;
 }
