--- a/power_station/Application/Home/View/Station/power_station_monitor.html
+++ b/power_station/Application/Home/View/Station/power_station_monitor.html
@@ -1,5 +1,5 @@
 <include file="Common/station_monitor_header" />
-  	
+ <body> 	
     <!-- 顶部导航条 -->
     <div id="topbar">
       <include file="Common/topbar" />
