--- a/power_station/Application/Home/View/Station/test.html
+++ b/power_station/Application/Home/View/Station/test.html
@@ -6,11 +6,28 @@
 
 
 <body>
-	<input type="text" name="" id="datetimepicker">
+	<!-- <input type="text" name="" id="datetimepicker"> -->
 
- <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
+<?php 
+echo "Hello World2!"; 
+
+$arr = array();
+$arr[] = "qwe";
+$arr[] = "ss";
+
+$array2 = array();
+
+for($i = 0; $i < 10; $i++) {
+	$array2[$i] = $i+1;
+}
+
+echo $array2[0];
+
+?> 
+
+<!--  <script type="text/javascript" src="__PUBLIC__/Static/Jquery/jquery.min.js"></script>
     <script src="__PUBLIC__/script/station/jquery.datetimepicker.full.js"></script>
-    <script type="text/javascript" src="__PUBLIC__/script/station/running_log.js"></script>
+    <script type="text/javascript" src="__PUBLIC__/script/station/running_log.js"></script> -->
 </body>
 
 
